# platform-apps-client

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
platform_apps_client/: __init__.py  _client.py
tests/integration/: conftest.py  test_client.py
tests/unit/: test_client.py
