[project]
name = "platform-apps-client"
description = "Apolo internal client for platform-apps API"
authors = [
    {name = "apolo.us"}
]
license = {text = "proprietary"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["aiohttp (>=3.12.14,<4.0.0)", "pydantic (>=2.11.7,<3.0.0)"]
dynamic = ["version"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
fix-shallow-repository = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
cryptography = "^45.0.4"
pytest-aiohttp = "^1.1.0"

[tool.black]
exclude = '''
/(
      \.git
    | venv
    | __pycache__
    | \.tox
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
addopts = """
    -vv
    --cov-config=setup.cfg
    --cov-branch
    --cov-report term-missing:skip-covered
"""

[tool.mypy]
follow_imports = "silent"
strict_equality = true
# --strict option
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
